add CGSS datasource
